💄 fix: sidebar overflow scroll

--- a/source-src/css/_partial/navbar.styl
+++ b/source-src/css/_partial/navbar.styl
@@ -14,6 +14,13 @@
         opacity .8
         background-color body-color
     &.nav-main
+      height 60vh
+      overflow-y scroll
+      scrollbar-width none
+      -ms-overflow-style none
+      &::-webkit-scrollbar
+        width 0px
+        height 0px
       .nav-item-link
         i
           font-size 1rem
